--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 # oXygen XML Editor by SyncRO Soft SRL
 # https://www.oxygenxml.com
 /**/out/
-
+# Ignore .idea files
+.idea/
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
