--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.env
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -93,7 +93,7 @@ fabric.properties
  modules.xml
  .idea/misc.xml
  *.ipr
-
+.env
 # Sonarlint plugin
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
 .idea/**/sonarlint/
